# IRPenTracking

./: .gitignore  AnalogueDigitalDocumentsDemo.py  Constants.py  DocumentLocatorService.py  PDFAnnotationsService.py  README.md  Study.ipynb  axidraw_control.py  calibrate_camera.py  calibration_image_capture_service.py  camera_calibration_service.py  camera_test_script.py  config.ini  debug_data.txt  draw_shape.py  flir_blackfly_s.py  flir_blackfly_s_calibration_tool.py  hid_device.py  ir_pen.py  ir_pen_cnn.py  laser_pen_detector_service.py  logitech_brio.py  main.py  move_axidraw_2.py  palette.py  pen_color_detector.py  pen_event.py  pen_events_controller.py  pen_hid.py  pen_state.py  pen_state_detector.py  pen_state_svm.py  prepare_dataset.py  procam_calibration.py  procam_calibration_image_capture.py  realsense_d435.py  realsense_d435_new.py  requirements.txt  resolution_data_horizontal.csv  resolution_data_vertical.csv  (+19 more)
ROS2/src/vigitia_interfaces/: CMakeLists.txt  package.xml
ROS2/src/vigitia_interfaces/msg/: ArucoList.msg  ArucoMarker.msg  DetectedObject.msg  DetectedObjectsList.msg  IRPenEvents.msg  Page.msg  PageList.msg
camera_chessboard_calibration/: calibration_image_capture_service.py  camera_calibration_service.py
cnn/: prepare_dataset.py  train_network.ipynb
evaluation/: cnn.ipynb  cnn_stereo.ipynb  exploration.ipynb  move_axidraw_2.py  phrases.txt  train_network.ipynb
old/: Study.ipynb  config_old.ini  pen_state_smp.py  run.py  stored_data_draw.csv  stored_data_hover.csv
pen_color_detection/: pen_color_detector.py
sdl_frontend/: Makefile  fifo.h  (+31 more)
(+134 files in other folders)
